// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 235.78793332024537,
      "y": 4,
      "z": -103.30304717918898,
    },
    "isLeaf": false,
    "length": 511.59362994598325,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 235.78793332024537,
      "y": 4,
      "z": 152.49376779380268,
    },
    "path": "/root/src",
    "visible": true,
    "width": 332.4253252737734,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.80863274233096,
      "y": 6,
      "z": -133.0889398092147,
    },
    "isLeaf": false,
    "length": 342.3639697808191,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 216.80863274233096,
      "y": 6,
      "z": 38.093045081194845,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 278.36307514274444,
    "x0": 327.62709517095874,
    "y0": 31.320067745580538,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 147.21786395664486,
      "y": 6,
      "z": 202.03810640334908,
    },
    "isLeaf": false,
    "length": 131.66509293136818,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 286.39940152801705,
      "y": 6,
      "z": 202.03810640334908,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 278.36307514274444,
    "x0": 327.62709517095874,
    "y0": 386.205559937665,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 144.1505022470829,
      "y": 506,
      "z": -129.95855920639835,
    },
    "isLeaf": true,
    "length": 152.3997012735116,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 261.09366742413124,
      "y": 506,
      "z": -129.95855920639835,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 233.88633035409663,
    "x0": 335.67891965855875,
    "y0": 43.84159015684586,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 144.1505022470829,
      "y": 506,
      "z": 34.962664478378514,
    },
    "isLeaf": true,
    "length": 152.39970127351154,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 261.09366742413124,
      "y": 506,
      "z": 34.962664478378514,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 233.88633035409663,
    "x0": 335.67891965855875,
    "y0": 208.76281384162274,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 144.1505022470829,
      "y": 506,
      "z": 202.03810640334902,
    },
    "isLeaf": true,
    "length": 106.62204810883753,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 261.09366742413124,
      "y": 506,
      "z": 202.03810640334902,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 233.88633035409663,
    "x0": 335.67891965855875,
    "y0": 398.72708234893025,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.96864202482669,
      "y": 4,
      "z": 454.35717845125436,
    },
    "isLeaf": false,
    "length": 280.80163684359593,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 291.9350193881758,
      "y": 4,
      "z": 454.35717845125436,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 471.93275472669825,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.856991454288128,
      "y": 6,
      "z": 347.50781333891285,
    },
    "isLeaf": false,
    "length": 55.87084114516904,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 18.58080876176342,
      "y": 6,
      "z": 347.50781333891285,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 94.87560043210308,
    "x0": 197.4241084376861,
    "y0": 569.5723927663283,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.27013207017204,
      "y": 506,
      "z": 347.50781333891285,
    },
    "isLeaf": true,
    "length": 50.31270565300713,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 10.95163676825409,
      "y": 506,
      "z": 347.50781333891285,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 78.44353767685226,
    "x0": 202.1189835106149,
    "y0": 572.3514605124093,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 240.23511845487639,
      "y": 6,
      "z": 527.1134341789805,
    },
    "isLeaf": false,
    "length": 134.28044598170845,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 353.92438376255876,
      "y": 6,
      "z": 527.1134341789805,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 227.37853061536475,
    "x0": 433.3904858010352,
    "y0": 709.9732111881262,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 213.72712090769227,
      "y": 506,
      "z": 477.33510547139497,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 213.72712090769227,
      "y": 506,
      "z": 499.9547411607082,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 40.25386989612514,
    "x0": 443.6001859596297,
    "y0": 716.0252876267384,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 264.19069096241196,
      "y": 506,
      "z": 477.33510547139497,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 264.19069096241196,
      "y": 506,
      "z": 499.9547411607082,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 40.25386989612508,
    "x0": 494.0637560143494,
    "y0": 716.0252876267384,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 314.6542610171316,
      "y": 506,
      "z": 477.33510547139497,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 314.6542610171316,
      "y": 506,
      "z": 499.9547411607082,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 40.25386989612525,
    "x0": 544.527326069069,
    "y0": 716.0252876267384,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 365.1178310718512,
      "y": 506,
      "z": 477.33510547139497,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 365.1178310718512,
      "y": 506,
      "z": 499.9547411607082,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 40.25386989612514,
    "x0": 594.9908961237886,
    "y0": 716.0252876267384,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.2795459473409,
      "y": 506,
      "z": 527.1134341789805,
    },
    "isLeaf": true,
    "length": 19.593597470007012,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 261.63826592276325,
      "y": 506,
      "z": 527.1134341789805,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 90.71743995084478,
    "x0": 443.6001859596297,
    "y0": 767.3166354439769,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.2795459473409,
      "y": 506,
      "z": 552.7591080875998,
    },
    "isLeaf": true,
    "length": 19.593597470007012,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 261.63826592276325,
      "y": 506,
      "z": 552.7591080875998,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 90.71743995084478,
    "x0": 443.6001859596297,
    "y0": 792.9623093525962,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.2795459473409,
      "y": 506,
      "z": 578.404781996219,
    },
    "isLeaf": true,
    "length": 19.593597470007126,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 261.63826592276325,
      "y": 506,
      "z": 578.404781996219,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 90.71743995084478,
    "x0": 443.6001859596297,
    "y0": 818.6079832612154,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 314.6542610171316,
      "y": 506,
      "z": 528.6264532886335,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 314.6542610171316,
      "y": 506,
      "z": 551.2460889779467,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 40.25386989612525,
    "x0": 544.527326069069,
    "y0": 767.3166354439769,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 365.1178310718512,
      "y": 506,
      "z": 528.6264532886335,
    },
    "isLeaf": true,
    "length": 45.23927137862631,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 365.1178310718512,
      "y": 506,
      "z": 551.2460889779467,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 40.25386989612514,
    "x0": 594.9908961237886,
    "y0": 767.3166354439769,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 317.2066860567802,
      "y": 506,
      "z": 578.4047819962188,
    },
    "isLeaf": true,
    "length": 19.593597470007012,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 362.56540603220253,
      "y": 506,
      "z": 578.4047819962188,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 90.71743995084478,
    "x0": 544.527326069069,
    "y0": 818.6079832612154,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -17.65601021984483,
      "y": 4,
      "z": -57.77792784577396,
    },
    "isLeaf": false,
    "length": 460.27668702665045,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -17.65601021984483,
      "y": 4,
      "z": 172.36041566755125,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 310.3821787651835,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -79.41475694650981,
      "y": 6,
      "z": -12.336151056330209,
    },
    "isLeaf": false,
    "length": 228.96655968688265,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 45.37349261230705,
      "y": 6,
      "z": -12.336151056330209,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 249.57649911763372,
    "x0": 108.19111827408177,
    "y0": 123.18056910022847,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -77.88984961992549,
      "y": 506,
      "z": -12.336151056330237,
    },
    "isLeaf": true,
    "length": 206.46831021918484,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": 25.549697366710888,
      "y": 506,
      "z": -12.336151056330237,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 206.87909397327272,
    "x0": 120.39037688675634,
    "y0": 134.42969383407734,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.04188089730104,
      "y": 6,
      "z": 160.80614492326083,
    },
    "isLeaf": false,
    "length": 45.83825442816851,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 91.04188089730104,
      "y": 6,
      "z": 183.7252721373451,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 31.166474975181586,
    "x0": 325.45864340971025,
    "y0": 399.3465813162187,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.88756700933138,
      "y": 506,
      "z": 161.94263057024017,
    },
    "isLeaf": true,
    "length": 41.29231184025099,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 89.88756700933138,
      "y": 506,
      "z": 182.5887864903657,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 25.779676831323115,
    "x0": 326.9977285936698,
    "y0": 401.61955261017744,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -71.2624474123114,
      "y": 4,
      "z": 403.84641539454066,
    },
    "isLeaf": false,
    "length": 73.24642442806646,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 131.90685696793895,
      "y": 4,
      "z": 403.84641539454066,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 406.3386087605007,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -154.84475617633845,
      "y": 502,
      "z": 403.8464153945407,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -154.84475617633845,
      "y": 502,
      "z": 403.8464153945407,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 95.15524382366155,
    "y0": 653.8464153945407,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "path": "/root",
    "visible": true,
    "width": 0,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 12,
      "y": 2,
      "z": 270.5,
    },
    "isLeaf": false,
    "length": 1041,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 536,
      "y": 2,
      "z": 270.5,
    },
    "path": "/root",
    "visible": true,
    "width": 1048,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 34.25,
    },
    "isLeaf": true,
    "length": 945,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 506.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 18,
      "y": 502,
      "z": 767,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 458,
      "y": 502,
      "z": 767,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 1017,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -1,
      "y": 2,
      "z": 243,
    },
    "isLeaf": false,
    "length": 986,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 497,
      "y": 2,
      "z": 243,
    },
    "path": "/root",
    "visible": true,
    "width": 996,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -15.5,
      "y": 4,
      "z": 12,
    },
    "isLeaf": true,
    "length": 924,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -15.5,
      "y": 4,
      "z": 474,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 407,
    "x0": 31,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 422.5,
      "y": 4,
      "z": 12,
    },
    "isLeaf": false,
    "length": 924,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 422.5,
      "y": 4,
      "z": 474,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 407,
    "x0": 469,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 320.25,
      "y": 6,
      "z": -69.56722608024691,
    },
    "isLeaf": true,
    "length": 236.86554783950618,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 460.75,
      "y": 6,
      "z": -69.56722608024691,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 62,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 390.5,
      "y": 6,
      "z": 228.39916087962962,
    },
    "isLeaf": true,
    "length": 594.1344521604938,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 390.5,
      "y": 6,
      "z": 525.4663869598764,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 329.8655478395062,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 320.25,
      "y": 504,
      "z": 689.5,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 460.75,
      "y": 504,
      "z": 689.5,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 939.5,
    "z0": 4,
  },
]
`;
